--- a/app/src/main/res/layout/fragment_playlist_detail.xml
+++ b/app/src/main/res/layout/fragment_playlist_detail.xml
@@ -1,129 +1,126 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<com.google.android.material.circularreveal.coordinatorlayout.CircularRevealCoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.fragments.playlist_detail.PlaylistDetailFragment">
-
+    xmlns:tools="http://schemas.android.com/tools"
+    android:background="@android:color/background_light"
+    android:fitsSystemWindows="true">
 
     <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/main_appbar"
+        android:id="@+id/main.appbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+        android:layout_height="300dp"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        android:fitsSystemWindows="true"
+        >
 
         <com.google.android.material.appbar.CollapsingToolbarLayout
             android:id="@+id/main.collapsing"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">
-            
+            android:layout_height="match_parent"
+            app:layout_scrollFlags="scroll|exitUntilCollapsed"
+            android:fitsSystemWindows="true"
+            app:contentScrim="?attr/colorPrimary"
+            app:expandedTitleMarginStart="48dp"
+            app:expandedTitleMarginEnd="64dp"
+            >
 
-            <ImageView
-                android:id="@+id/img_playlist"
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="300dp"
-                android:scaleType="centerCrop"
-                android:src="@drawable/ic_launcher_background"
-                app:layout_collapseMode="parallax"
-                app:layout_collapseParallaxMultiplier="0.9"
-                app:tint="#11000000" />
+                android:layout_height="match_parent">
+                <com.google.android.material.imageview.ShapeableImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:id="@+id/playlists_preview"
+                    tools:src="@drawable/ic_launcher_background"
+                    android:scaleType="centerCrop"/>
 
 
-            <FrameLayout
-                android:id="@+id/frame_layout_title"
+                <com.google.android.material.textview.MaterialTextView
+                    android:id="@+id/tv_title_playlist"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="20dp"
+                    android:layout_marginTop="80dp"
+                    tools:text="Emotional Well-being - Healing Practices for Children"
+                    android:textColor="@color/black"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+
+                    android:textStyle="bold"
+                    android:textSize="26sp"
+                    app:layout_constraintTop_toTopOf="parent"/>
+                <com.google.android.material.textview.MaterialTextView
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    tools:text="In this series, we break down the impact of displacement, instability, violence, and trauma in children, and offer exercises to support children in their healing journey. "
+                    android:textColor="@color/black"
+                    android:id="@+id/tv_desc_playlist"
+                    android:layout_marginTop="10dp"
+                    android:textSize="18sp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:layout_marginBottom="60dp"
+                    android:layout_marginHorizontal="20dp"/>
+
+
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <androidx.appcompat.widget.Toolbar
+
+                android:id="@+id/main.toolbar"
                 android:layout_width="match_parent"
-                android:layout_height="100dp"
-                android:layout_gravity="bottom|center_horizontal"
-                android:background="#C51C1C"
-                android:orientation="vertical"
-                app:layout_collapseMode="parallax"
-                app:layout_collapseParallaxMultiplier="0.3">
-
-                <LinearLayout
-                    android:id="@+id/main_linearlayout_title"
+                android:layout_height="?attr/actionBarSize"
+                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+                app:layout_collapseMode="pin"
+                >
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/btn_back"
+                    app:iconGravity="start"
+                    app:icon="@drawable/arrow"
+                    app:iconTint="@color/red"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:orientation="vertical">
-
-
-                <TextView
-                    android:id="@+id/tv_playlist_name"
+                    android:text="@string/back"
+                    android:textSize="22sp"
+                    android:textColor="@color/Red"
+                    android:background="@android:color/transparent"/>
+                <com.google.android.material.textview.MaterialTextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:gravity="bottom|center"
-                    android:text="Playlist"
-                    android:textColor="@android:color/white"
-                    android:textSize="30sp"
-                    />
+                    android:text="@string/playlist"
+                    android:textColor="@color/red"
+                    android:textSize="24dp"
+                    android:textStyle="bold"
+                    android:textAlignment="center"
+                    android:layout_marginHorizontal="40dp"/>
 
-                </LinearLayout>
-            </FrameLayout>
+
+            </androidx.appcompat.widget.Toolbar>
         </com.google.android.material.appbar.CollapsingToolbarLayout>
     </com.google.android.material.appbar.AppBarLayout>
-
 
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_playlist_video"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:behavior_overlapTop="30dp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        tools:listitem="@layout/item_playlist"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        tools:listitem="@layout/item_videos" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:layout_height="wrap_content"
+        android:src="@drawable/polygon_1"
+        android:layout_width="wrap_content"
+        app:layout_anchor="@id/main.appbar"
+        android:id="@+id/btn_play_video"
+        android:layout_marginRight="10dp"
+        app:layout_anchorGravity="bottom|right|end"
+        android:background="@drawable/cycler"
+        android:backgroundTint="@color/red"
         />
-
-    <Toolbar
-        android:id="@+id/main.toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="#C51C1C"
-        app:layout_anchor="@id/frame_layout_title"
-        app:theme="@style/ThemeOverlay.AppCompat.Dark"
-        app:title=""
-        >
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:orientation="horizontal"
-            >
-
-            <Space
-                android:layout_width="32dp"
-                android:layout_height="32dp"
-                />
-
-            <TextView
-                android:id="@+id/main_textview_title"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_marginStart="8dp"
-                android:gravity="center_vertical"
-                tools:text="Some Text"
-                android:textColor="@android:color/white"
-                android:textSize="20sp"
-                />
-
-        </LinearLayout>
-    </Toolbar>
-
-    <de.hdodenhof.circleimageview.CircleImageView
-        android:layout_width="120dp"
-        android:layout_height="120dp"
-        android:layout_gravity="center_horizontal"
-        android:src="@drawable/channel_img"
-        app:civ_border_color="@color/white"
-        app:civ_border_width="2dp"
-        app:finalHeight="32dp"
-        app:finalYPosition="2dp"
-        app:startHeight="2dp"
-        app:layout_behavior=".ui.utils.AvatarImageBehavior"
-        app:startToolbarPosition="2dp"
-        app:startXPosition="2dp"
-        />
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+</com.google.android.material.circularreveal.coordinatorlayout.CircularRevealCoordinatorLayout>
