чекинг фор интирнэтэ ит сиемс то ворк

--- a/app/src/main/res/navigation/main_graph.xml
+++ b/app/src/main/res/navigation/main_graph.xml
@@ -69,4 +69,8 @@
             android:defaultValue="null"
             app:nullable="true"/>
     </fragment>
+    <fragment
+        android:id="@+id/noInternetFragment"
+        android:name="com.ulan.youtube.ui.fragments.NoInternetFragment"
+        android:label="NoInternetFragment" />
 </navigation>
